# project4-forum

./: Pipfile  README.md  pyproject.toml
boards/migrations/: 0001_initial.py  0003_remove_board_threads.py
forum/: settings.py
forum/boards/: models.py  serializers.py  urls.py  views.py
forum/boards/migrations/: 0002_initial.py
forum/forum/: .env  settings.py  urls.py
forum/posts/: models.py  serializers.py  urls.py  views.py
forum/posts/migrations/: 0001_initial.py
forum/threads/: models.py  serializers.py  urls.py  views.py
forum/threads/migrations/: 0002_initial.py  0005_alter_thread_author.py
forum/users/: forms.py  models.py  serializers.py  urls.py  views.py
forum/users/migrations/: 0003_alter_customuser_password_alter_customuser_username.py  0004_alter_customuser_is_admin.py
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/BoardPage/: BoardPage.css  BoardPage.jsx
frontend/src/components/CreateThreadPage/: CreateThreadPage.css  CreateThreadPage.jsx
frontend/src/context/: UserContext.js
frontend/src/utils/: userService.js
posts/: serializers.py  views.py
posts/migrations/: 0002_initial.py  0003_post_thread.py
threads/: serializers.py  views.py
threads/migrations/: 0001_initial.py  0003_remove_thread_posts_thread_board.py  0004_alter_thread_author_alter_thread_created_at.py
users/: admin.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_password_alter_customuser_username.py  0005_remove_customuser_is_admin_customuser_rating_and_more.py  0006_delete_customuser.py
(+14 files in other folders)
