[tool.poetry]
name = "project4-forum"
version = "0.1.0"
description = ""
authors = ["mjpitkin45 <mjpitkin45@gmail.com>"]
readme = "README.md"
packages = [{include = "project4_forum"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
mypy = "^0.991"
autopep8 = "^2.0.0"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
