[tool.poetry]
name = "project4-forum"
version = "0.1.0"
description = ""
authors = ["mjpitkin45 <mjpitkin45@gmail.com>"]
readme = "README.md"
packages = [{include = "project4_forum"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
mypy = "^0.991"
autopep8 = "^2.0.0"
psycopg2 = "^2.9.5"
django-rest-framework = "^0.1.0"
pyjwt = "^2.6.0"
django-cors-headers = "^3.13.0"
django-environs = "^0.1.1"
dj-database-url = "^1.0.0"
django-environ = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
